on issue #70
- Found a layout bug on search results on ie7, fixed.
- Tested the current geolocation and seems to be working, IE7-9
- Tested de tablediff currently the same as on master branch and it looks like it doesn’t work correctly on any browser, at least with observational data databases, must investigate further.

--- a/emif/emif/templates/bootstrap_ie_compatibility.css
+++ b/emif/emif/templates/bootstrap_ie_compatibility.css
@@ -287,3 +287,7 @@ padding: 2px;
 .gt-ie7 #li_workspace {
     margin-top: -8px !important;
 }
+
+.lt-ie8 #row_loading {
+    clear: both;
+}
